Agregando el enlace al repositorio de Github, en el icono de GitHub

--- a/DesafioDos/desafio2.html
+++ b/DesafioDos/desafio2.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="m-2">
-            <a href="#" target="_blank"><img src="../img/github.svg" class="logo" alt="Imagen del icono de GitHub"></a>
+            <a href="https://github.com/Nahuel-DevOne/DesafiosJS-Coderhouse" target="_blank"><img src="../img/github.svg" class="logo" alt="Imagen del icono de GitHub"></a>
         </div>
 
         <div class="m-2">
